Improve the comments on the Swagger spec
